tests/models/enum/unnamed/f64/fail/max_length.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(max_length = 2)]
        f64
    ),
}
fn main() {}
